# H723_basic

./: .gitignore  CMakeLists.txt  generate_arm_build.py
SEGGER_RTT/: CMakeLists.txt  README.md
SEGGER_RTT/RTT/: SEGGER_RTT_Conf.h
application/: CMakeLists.txt
application/Inc/: app.h  external_ram.h
application/Src/: external_ram.c
common/: CMakeLists.txt  debug.c  debug.h  log.c  log.h  log_c  utils.h
stm32cubemx/: CMakeLists.txt  STM32H723ZGTX_FLASH.ld  STM32H723ZGTX_RAM.ld  stm32cubemx.ioc
stm32cubemx/Core/Inc/: main.h  stm32h7xx_hal_conf.h
stm32cubemx/Core/Src/: main.c  stm32h7xx_hal_msp.c
toolchain/: arm_embedded_toolchain.txt
tools/: build.sh  debug_application.sh  flash.sh  gdbinit_local  go.sh  start_gdb_server.sh
